--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="divide">/</button>
         <div id="output"></div>
     </div>
-    <script src="/Excercise-1/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
